// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`icons/general/IconRetention should correctly render default icon 1`] = `
<AccessibleSVG
  className="icon-retention "
  height={14}
  viewBox="0 0 16 14"
  width={16}
>
  <path
    className="fill-color"
    d="M1,14h14V7H1V14z M6,8h4c0.5,0,1,0.4,1,1c0,0.6-0.5,1-1,1H6c-0.5,0-1-0.4-1-1C5,8.4,5.5,8,6,8z"
    fill="#FFFFFF"
  />
  <rect
    className="fill-color"
    fill="#FFFFFF"
    height="2"
    width="16"
    y="4"
  />
  <polygon
    className="fill-color"
    fill="#FFFFFF"
    points="13,0 3,0 0,3 16,3"
  />
</AccessibleSVG>
`;

exports[`icons/general/IconRetention should correctly render icon with specified props 1`] = `
<AccessibleSVG
  className="icon-retention test"
  height={150}
  title="title"
  viewBox="0 0 16 14"
  width={160}
>
  <path
    className="fill-color"
    d="M1,14h14V7H1V14z M6,8h4c0.5,0,1,0.4,1,1c0,0.6-0.5,1-1,1H6c-0.5,0-1-0.4-1-1C5,8.4,5.5,8,6,8z"
    fill="#222"
  />
  <rect
    className="fill-color"
    fill="#222"
    height="2"
    width="16"
    y="4"
  />
  <polygon
    className="fill-color"
    fill="#222"
    points="13,0 3,0 0,3 16,3"
  />
</AccessibleSVG>
`;
